# SERNet_Cityscapes_segmentation

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cmd.txt  pyproject.toml
static/css/: styles.css
static/js/: scripts.js
templates/: display.html  index.html
